Add project details: Logic Gates Construction and Hour of Code Workshop

--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
       <div class="grid grid-2">
         <div class="card">
           <div class="card__header">
-            <h3>Project 1</h3>
-            <span class="tag">HTML • CSS • JS</span>
+            <h3>Logic Gates Construction</h3>
+            <span class="tag">Electronics • Digital Logic</span>
           </div>
-          <p>A brief description of your first project. Highlight the main features and what you learned building it. This could be a personal website, a web app, or a coding challenge you completed.</p>
+          <p>Constructed basic logic gates (AND, OR, NOT, etc.) using transistors and electronic components. Completed in a team of 4–5 students, this project strengthened my understanding of digital logic and practical electronics.</p>
           <div class="project-img" style="margin-top: 12px;">
-            <img src="assets/img/project1.svg" alt="Project 1 screenshot">
+            <img src="assets/img/project1.svg" alt="Logic Gates Construction project">
           </div>
           <div style="margin-top: 12px; display: flex; gap: 12px; align-items: center;">
             <a href="projects.html" class="repo-link">Learn more →</a>
@@ -110,12 +110,12 @@
         </div>
         <div class="card">
           <div class="card__header">
-            <h3>Project 2</h3>
-            <span class="tag">Web Development</span>
+            <h3>Hour of Code Workshop</h3>
+            <span class="tag">Education • Teaching</span>
           </div>
-          <p>Describe your second project here. This could be your Hour of Code project or another web development project. Share what technologies you used and what challenges you overcame.</p>
+          <p>Participated in an Hour of Code workshop teaching children coding basics and creative algorithm application. Completed in a team of 4 students, this project improved my communication, teaching, and teamwork skills.</p>
           <div class="project-img" style="margin-top: 12px;">
-            <img src="assets/img/project2.svg" alt="Project 2 screenshot">
+            <img src="assets/img/project2.svg" alt="Hour of Code Workshop project">
           </div>
           <div style="margin-top: 12px; display: flex; gap: 12px; align-items: center;">
             <a href="projects.html" class="repo-link">Learn more →</a>
