--- a/projects.html
+++ b/projects.html
@@ -47,17 +47,17 @@
     <section class="panel">
       <div class="card">
         <div class="card__header">
-          <h3>Project 1</h3>
-          <span class="tag">HTML • CSS • JS</span>
+          <h3>Logic Gates Construction</h3>
+          <span class="tag">Electronics • Digital Logic</span>
         </div>
-        <p>Describe the goal of Project 1, what features you implemented, and what you learned.</p>
+        <p>Constructed basic logic gates (AND, OR, NOT, etc.) using transistors and other electronic components. This project was completed in a team of 4–5 students and helped strengthen my understanding of digital logic and practical electronics.</p>
         <div class="project-img">
-          <img src="assets/img/project1.svg" alt="Project 1 screenshot">
+          <img src="assets/img/project1.svg" alt="Logic Gates Construction project">
         </div>
         <ul class="list">
-          <li>Key feature or interaction</li>
-          <li>Another bullet explaining impact or learning</li>
-          <li>Link to live demo or repo if applicable</li>
+          <li><strong>Technologies / Tools Used:</strong> Breadboards, Transistors, Logic Gate Components</li>
+          <li><strong>Team Size:</strong> 4-5 students</li>
+          <li><strong>Key Learning:</strong> Understanding of digital logic and practical electronics implementation</li>
         </ul>
       </div>
     </section>
@@ -65,17 +65,17 @@
     <section class="panel">
       <div class="card">
         <div class="card__header">
-          <h3>Project 2 (Hour of Code)</h3>
-          <span class="tag">Optional</span>
+          <h3>Hour of Code Workshop</h3>
+          <span class="tag">Education • Teaching</span>
         </div>
-        <p>Add your Hour of Code or another project. Briefly cover the purpose, result, and what tools you used.</p>
+        <p>Participated in an Hour of Code workshop, teaching children the basics of coding and how to apply algorithms creatively. This project was completed in a team of 4 students and helped improve my communication, teaching, and teamwork skills.</p>
         <div class="project-img">
-          <img src="assets/img/project2.svg" alt="Project 2 screenshot">
+          <img src="assets/img/project2.svg" alt="Hour of Code Workshop project">
         </div>
         <ul class="list">
-          <li>Main concept or activity</li>
-          <li>Technologies or platforms used</li>
-          <li>What you would improve next</li>
+          <li><strong>Technologies / Tools Used:</strong> Scratch, Python</li>
+          <li><strong>Team Size:</strong> 4 students</li>
+          <li><strong>Key Learning:</strong> Improved communication, teaching, and teamwork skills through educational outreach</li>
         </ul>
       </div>
     </section>
