Update Projects page introduction with tailored description

--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
   <main>
     <section class="panel">
       <h1>Projects</h1>
-      <p>Here are a few things I’ve built. Each project has a short summary, tech used, and a screenshot placeholder you can replace with your own images.</p>
+      <p>Here are a few projects I completed as part of my university coursework. Each project helped me develop technical skills, teamwork, and hands-on experience with coding and electronics.</p>
     </section>
 
     <section class="panel">
