Match homepage sections with About page content for consistency

--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
         <h1>Elshan Samadzada</h1>
         <p class="subtitle">Student • Builder • Curious mind learning web development</p>
         <div style="color: var(--muted); margin-top: 16px; margin-bottom: 24px; line-height: 1.8;">
-          <p style="margin-bottom: 12px;">I'm a passionate web developer and designer who loves creating beautiful, functional websites and web applications. With a focus on clean code, great design, and continuous learning, I enjoy turning ideas into reality through code.</p>
-          <p style="margin-bottom: 12px;">When I'm not coding, you'll find me exploring new technologies, working on side projects, or sharing what I learn with others. I believe in building things that matter and making the web a better place, one project at a time.</p>
+          <p style="margin-bottom: 12px;">I am a first-year Computer Engineering student at ADA University, passionate about programming, artificial intelligence, and web development. I enjoy combining logical problem-solving with creativity to build small projects and explore new technologies.</p>
+          <p style="margin-bottom: 12px;">I work with tools like VS Code, Git, and GitHub to manage and develop my projects. Currently living in Baku, Azerbaijan, I am driven by curiosity, continuous learning, and a desire to understand and create innovative solutions in technology.</p>
         </div>
         <div class="cta">
           <a class="btn btn-primary" href="projects.html">View Projects</a>
           <a class="btn btn-ghost" href="about.html">About me</a>
         </div>
         <div style="margin-top:24px;">
-          <span class="pill">HTML/CSS</span>
-          <span class="pill">JavaScript</span>
-          <span class="pill">Responsive Design</span>
+          <span class="pill">Python</span>
+          <span class="pill">HTML</span>
           <span class="pill">Git & GitHub</span>
+          <span class="pill">VS Code</span>
         </div>
       </div>
       <div class="profile">
@@ -77,13 +77,13 @@
         </div>
         <div>
           <p style="color: var(--muted); margin-bottom: 16px; font-size: 1.05rem; line-height: 1.8;">
-            I'm a dedicated web developer with a passion for creating meaningful digital experiences. My journey in web development started with curiosity and has evolved into a commitment to building clean, accessible, and user-friendly websites.
+            I am a first-year Computer Engineering student at ADA University, passionate about programming, artificial intelligence, and web development. I enjoy combining logical problem-solving with creativity to build small projects and explore new technologies.
           </p>
           <p style="color: var(--muted); margin-bottom: 16px; line-height: 1.8;">
-            I believe in the power of continuous learning and staying up-to-date with the latest web technologies. Whether it's crafting responsive layouts, implementing interactive features, or optimizing performance, I approach each project with attention to detail and a focus on user experience.
+            I work with tools like VS Code, Git, and GitHub to manage and develop my projects. Currently living in Baku, Azerbaijan, I am driven by curiosity, continuous learning, and a desire to understand and create innovative solutions in technology.
           </p>
           <p style="color: var(--muted); line-height: 1.8;">
-            When I'm not coding, I enjoy exploring new frameworks, contributing to open-source projects, and sharing knowledge with the developer community. My goal is to create web solutions that are not only functional but also beautiful and accessible to everyone.
+            Outside of academics, I enjoy exploring nature, traveling, playing chess, and following developments in AI. My goal is to continue developing my technical skills and gain hands-on experience in real-world projects, particularly in AI and software engineering.
           </p>
         </div>
       </div>
@@ -132,16 +132,16 @@
       <div class="grid grid-2">
         <div class="card">
           <h3>Who am I?</h3>
-          <p>I'm a student exploring software, design, and problem solving. I enjoy building small products and documenting what I learn. When I'm not coding, I'm learning new technologies and working on side projects.</p>
+          <p>I'm a first-year Computer Engineering student at ADA University, passionate about programming, artificial intelligence, and web development. I enjoy combining logical problem-solving with creativity to build small projects and explore new technologies.</p>
         </div>
         <div class="card">
           <h3>What I'm learning</h3>
           <ul class="list">
-            <li>Modern HTML, CSS, and responsive layouts</li>
-            <li>JavaScript basics and DOM interactions</li>
-            <li>Using Git + GitHub for version control</li>
-            <li>Web accessibility and best practices</li>
-            <li>UI/UX design principles</li>
+            <li>Problem-solving and analytical thinking through coursework and assignments</li>
+            <li>Collaborative project development in small academic teams</li>
+            <li>Basic technical documentation and code organization</li>
+            <li>Self-directed learning in programming, AI, and web development</li>
+            <li>Time management and balancing academic work with personal projects</li>
           </ul>
         </div>
       </div>
@@ -151,15 +151,13 @@
       <h2>Skills & Technologies</h2>
       <p>Tools and technologies I'm working with:</p>
       <div style="margin-top: 20px; display: flex; flex-wrap: wrap; gap: 8px;">
-        <span class="pill">HTML5</span>
-        <span class="pill">CSS3</span>
+        <span class="pill">Python</span>
+        <span class="pill">HTML</span>
+        <span class="pill">CSS</span>
         <span class="pill">JavaScript</span>
-        <span class="pill">Responsive Design</span>
         <span class="pill">Git & GitHub</span>
         <span class="pill">VS Code</span>
-        <span class="pill">Web Accessibility</span>
-        <span class="pill">Figma</span>
-        <span class="pill">Command Line</span>
+        <span class="pill">Live Server</span>
       </div>
     </section>
 
