Restore comprehensive Skills & Technologies list on homepage

--- a/index.html
+++ b/index.html
@@ -151,13 +151,15 @@
       <h2>Skills & Technologies</h2>
       <p>Tools and technologies I'm working with:</p>
       <div style="margin-top: 20px; display: flex; flex-wrap: wrap; gap: 8px;">
-        <span class="pill">Python</span>
-        <span class="pill">HTML</span>
-        <span class="pill">CSS</span>
+        <span class="pill">HTML5</span>
+        <span class="pill">CSS3</span>
         <span class="pill">JavaScript</span>
+        <span class="pill">Responsive Design</span>
         <span class="pill">Git & GitHub</span>
         <span class="pill">VS Code</span>
-        <span class="pill">Live Server</span>
+        <span class="pill">Web Accessibility</span>
+        <span class="pill">Figma</span>
+        <span class="pill">Command Line</span>
       </div>
     </section>
 
