Add LinkedIn profile link to contact section

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
     <section class="panel" id="contact">
       <h2>Get in Touch</h2>
-      <p>Have a project in mind or want to collaborate? I'd love to hear from you. Use the form below or email me directly at <a href="mailto:elshansamedzade7@gmail.com" style="color: var(--accent);">elshansamedzade7@gmail.com</a>.</p>
+      <p>Have a project in mind or want to collaborate? I'd love to hear from you. Use the form below, email me directly at <a href="mailto:elshansamedzade7@gmail.com" style="color: var(--accent);">elshansamedzade7@gmail.com</a>, or connect with me on <a href="https://www.linkedin.com/in/elshan-samadzada-118546380" style="color: var(--accent);" target="_blank" rel="noopener noreferrer">LinkedIn</a>.</p>
       <form id="contact-form">
         <label>
           Name
