Add Hour of Code Workshop photo to Project 2

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </div>
           <p>Participated in an Hour of Code workshop teaching children coding basics and creative algorithm application. Completed in a team of 4 students, this project improved my communication, teaching, and teamwork skills.</p>
           <div class="project-img" style="margin-top: 12px;">
-            <img src="assets/img/project2.svg" alt="Hour of Code Workshop project">
+            <img src="assets/img/Hour of Code.jpeg" alt="Hour of Code Workshop - CS Education Week 2025 Certificate of Completion">
           </div>
           <div style="margin-top: 12px; display: flex; gap: 12px; align-items: center;">
             <a href="projects.html" class="repo-link">Learn more →</a>
