--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
         </div>
         <p>Participated in an Hour of Code workshop, teaching children the basics of coding and how to apply algorithms creatively. This project was completed in a team of 4 students and helped improve my communication, teaching, and teamwork skills.</p>
         <div class="project-img">
-          <img src="assets/img/project2.svg" alt="Hour of Code Workshop project">
+          <img src="assets/img/Hour of Code.jpeg" alt="Hour of Code Workshop - CS Education Week 2025 Certificate of Completion">
         </div>
         <ul class="list">
           <li><strong>Technologies / Tools Used:</strong> Scratch, Python</li>
