Add Logic Gates Construction photo to Project 1

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </div>
           <p>Constructed basic logic gates (AND, OR, NOT, etc.) using transistors and electronic components. Completed in a team of 4–5 students, this project strengthened my understanding of digital logic and practical electronics.</p>
           <div class="project-img" style="margin-top: 12px;">
-            <img src="assets/img/project1.svg" alt="Logic Gates Construction project">
+            <img src="assets/img/Logic Gates.jpeg" alt="Logic Gates Construction project - Electronic circuit on breadboard">
           </div>
           <div style="margin-top: 12px; display: flex; gap: 12px; align-items: center;">
             <a href="projects.html" class="repo-link">Learn more →</a>
