--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
         </div>
         <p>Constructed basic logic gates (AND, OR, NOT, etc.) using transistors and other electronic components. This project was completed in a team of 4–5 students and helped strengthen my understanding of digital logic and practical electronics.</p>
         <div class="project-img">
-          <img src="assets/img/project1.svg" alt="Logic Gates Construction project">
+          <img src="assets/img/Logic Gates.jpeg" alt="Logic Gates Construction project - Electronic circuit on breadboard">
         </div>
         <ul class="list">
           <li><strong>Technologies / Tools Used:</strong> Breadboards, Transistors, Logic Gate Components</li>
